k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flaskapp
  name: flaskapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flaskapp
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: flaskapp
    spec:
      containers:
      - image: semeen1shaw/pythonapp:v1
        name: pythonapp
        ports:
        - containerPort: 7894
        resources: {}
