k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flaskapp
  name: flaskapp
spec:
  ports:
  - port: 7894
    protocol: TCP
    targetPort: 7894
    nodePort: 30628
  selector:
    app: flaskapp
  type: NodePort
status:
  loadBalancer: {}
